--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <img src="./logo.jpg" alt="Logo de Notitade" class="logo">
             <h1>El noticiero de la gente.</h1>
         </header>
-        <a href="#" class="cta-button"><i class="fa-brands fa-whatsapp"></i> &nbsp;Seguí el canal de WhatsApp</a>
+        <a href="https://www.whatsapp.com/channel/0029VaqXZFw2P59s74ewHt0g" class="cta-button"><i class="fa-brands fa-whatsapp"></i> &nbsp;Seguí el canal de WhatsApp</a>
         <div class="features">
             <div class="feature">
                 <h2>Noticias libres para todos &nbsp;<i class="fa-solid fa-newspaper"></i></h2>
@@ -179,7 +179,7 @@
         </div>
         <div class="final-cta">
             <h2>¿Qué estás esperando?</h2>
-            <a href="#" class="cta-button"><i class="fa-brands fa-whatsapp"></i> &nbsp;Seguí el canal de WhatsApp</a>
+            <a href="https://www.whatsapp.com/channel/0029VaqXZFw2P59s74ewHt0g" class="cta-button"><i class="fa-brands fa-whatsapp"></i> &nbsp;Seguí el canal de WhatsApp</a>
         </div>
     </div>
 
@@ -190,7 +190,7 @@
             <h3>¡No te pierdas de nada! Así podés activar las notificaciones del canal:</h3>
             <ol class="tutorial-steps">
                 <li>Abrí WhatsApp y dirigite al canal de Notitade.</li>
-                <a href="#" class="cta-button"><i class="fa-brands fa-whatsapp"></i> &nbsp;Ir al canal</a>
+                <a href="https://www.whatsapp.com/channel/0029VaqXZFw2P59s74ewHt0g" class="cta-button"><i class="fa-brands fa-whatsapp"></i> &nbsp;Ir al canal</a>
                 <li>Seguínos apretando 'Seguir' en la parte superior derecha.</li>
                 <li>Tocá el nombre del canal arriba en la pantalla.</li>
                 <li>Buscá la opción "Silenciar" y desmarcala.</li>
